// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Standard Transfer: bundle 1`] = `
Object {
  "aggregated_signature": "0x81198e68402824e0585fac43d79edf3efe19e4651747f4e9b8d28f6a8a5c319dac67d4a0c03ad957cbb7d7c3c955605d03d6c5750e0aa44baf73ddaa5fcfbe74e3cb922034b72656f0df410ff6ef8e81b56b1a6a0c9bddd9331b7a9c90f897ce",
  "coin_spends": Array [
    Object {
      "coin": Object {
        "amount": 1750000000000n,
        "parent_coin_info": "0xe3b0c44298fc1c149afbf4c8996fb92400000000000000000000000000000001",
        "puzzle_hash": "0x4f45877796d7a64e192bcc9f899afeedae391f71af3afd7e15a0792c049d23d3",
      },
      "puzzle_reveal": "0xff02ffff01ff02ffff01ff02ffff03ff0bffff01ff02ffff03ffff09ff05ffff1dff0bffff1effff0bff0bffff02ff06ffff04ff02ffff04ff17ff8080808080808080ffff01ff02ff17ff2f80ffff01ff088080ff0180ffff01ff04ffff04ff04ffff04ff05ffff04ffff02ff06ffff04ff02ffff04ff17ff80808080ff80808080ffff02ff17ff2f808080ff0180ffff04ffff01ff32ff02ffff03ffff07ff0580ffff01ff0bffff0102ffff02ff06ffff04ff02ffff04ff09ff80808080ffff02ff06ffff04ff02ffff04ff0dff8080808080ffff01ff0bffff0101ff058080ff0180ff018080ffff04ffff01b0a042c855d234578415254b7870b711fb25e8f85beaa4a66bd0673d394c761fa156406c2e3bb375d5b18766d2a12cc918ff018080",
      "solution": "0xff80ffff01ffff33ffa087908e3f85bf4b55c7e7709915c2ce97a1e6ec1d227e54a04dbfee6862d546a5ff830f424080ffff33ffa04f45877796d7a64e192bcc9f899afeedae391f71af3afd7e15a0792c049d23d3ff860197741199c08080ff8080",
    },
  ],
}
`;

exports[`Standard Transfer: observer puzzles 1`] = `
Array [
  Object {
    "address": "xch1fazcwauk67nyuxftej0cnxh7akhrj8m34ua06ls45pujcpyay0fsfc0grp",
    "hash": "4f45877796d7a64e192bcc9f899afeedae391f71af3afd7e15a0792c049d23d3",
    "puzzle": "(a (q 2 (q 2 (i 11 (q 2 (i (= 5 (point_add 11 (pubkey_for_exp (sha256 11 (a 6 (c 2 (c 23 ()))))))) (q 2 23 47) (q 8)) 1) (q 4 (c 4 (c 5 (c (a 6 (c 2 (c 23 ()))) ()))) (a 23 47))) 1) (c (q 50 2 (i (l 5) (q 11 (q . 2) (a 6 (c 2 (c 9 ()))) (a 6 (c 2 (c 13 ())))) (q 11 (q . 1) 5)) 1) 1)) (c (q . 0xa042c855d234578415254b7870b711fb25e8f85beaa4a66bd0673d394c761fa156406c2e3bb375d5b18766d2a12cc918) 1))",
    "synPubKey": "0xa042c855d234578415254b7870b711fb25e8f85beaa4a66bd0673d394c761fa156406c2e3bb375d5b18766d2a12cc918",
    "type": "Hardened",
  },
  Object {
    "address": "xch1tswpapnpytgldc4403ej53z90ptw0ckghky4c5ymkfqpneydd79sjqg40r",
    "hash": "5c1c1e866122d1f6e2b57c732a44457856e7e2c8bd895c509bb24019e48d6f8b",
    "puzzle": "(a (q 2 (q 2 (i 11 (q 2 (i (= 5 (point_add 11 (pubkey_for_exp (sha256 11 (a 6 (c 2 (c 23 ()))))))) (q 2 23 47) (q 8)) 1) (q 4 (c 4 (c 5 (c (a 6 (c 2 (c 23 ()))) ()))) (a 23 47))) 1) (c (q 50 2 (i (l 5) (q 11 (q . 2) (a 6 (c 2 (c 9 ()))) (a 6 (c 2 (c 13 ())))) (q 11 (q . 1) 5)) 1) 1)) (c (q . 0xa84464e45921d9dd485a3fb483c348569db6121eae6b449b1e8dc93c7076204e5eb7d0b71a6e1629c74e2e79f70272ff) 1))",
    "synPubKey": "0xa84464e45921d9dd485a3fb483c348569db6121eae6b449b1e8dc93c7076204e5eb7d0b71a6e1629c74e2e79f70272ff",
    "type": "Observed",
  },
  Object {
    "address": "xch1lawqfgvg5g5gh874vemxydypud883sr803agqwnrv09sp4m3a3yqlxm5xq",
    "hash": "ff5c04a188a2288b9fd56676623481e34e78c0677c7a803a6363cb00d771ec48",
    "puzzle": "(a (q 2 (q 2 (i 11 (q 2 (i (= 5 (point_add 11 (pubkey_for_exp (sha256 11 (a 6 (c 2 (c 23 ()))))))) (q 2 23 47) (q 8)) 1) (q 4 (c 4 (c 5 (c (a 6 (c 2 (c 23 ()))) ()))) (a 23 47))) 1) (c (q 50 2 (i (l 5) (q 11 (q . 2) (a 6 (c 2 (c 9 ()))) (a 6 (c 2 (c 13 ())))) (q 11 (q . 1) 5)) 1) 1)) (c (q . 0xb19697c17f2cdab19e31db62777f1b48944e6a50eea8bc813c3950e975498d2e43da897a02dd97a8257f5f7a3c40785b) 1))",
    "synPubKey": "0xb19697c17f2cdab19e31db62777f1b48944e6a50eea8bc813c3950e975498d2e43da897a02dd97a8257f5f7a3c40785b",
    "type": "Hardened",
  },
  Object {
    "address": "xch1tnks60dve3psw65rzznj0wrmeuaw90dehtg9dwanta4cpsaqscrqm6330v",
    "hash": "5ced0d3daccc43076a8310a727b87bcf3ae2bdb9bad056bbb35f6b80c3a08606",
    "puzzle": "(a (q 2 (q 2 (i 11 (q 2 (i (= 5 (point_add 11 (pubkey_for_exp (sha256 11 (a 6 (c 2 (c 23 ()))))))) (q 2 23 47) (q 8)) 1) (q 4 (c 4 (c 5 (c (a 6 (c 2 (c 23 ()))) ()))) (a 23 47))) 1) (c (q 50 2 (i (l 5) (q 11 (q . 2) (a 6 (c 2 (c 9 ()))) (a 6 (c 2 (c 13 ())))) (q 11 (q . 1) 5)) 1) 1)) (c (q . 0x8e561b96f3debc95c04893a357f291e888f550453f36b3db4091ed1c266ce04a79cffd0ba2dce1a3d3a7488462830b1b) 1))",
    "synPubKey": "0x8e561b96f3debc95c04893a357f291e888f550453f36b3db4091ed1c266ce04a79cffd0ba2dce1a3d3a7488462830b1b",
    "type": "Observed",
  },
  Object {
    "address": "xch1h35u0lvusm6pz38fpxyhyersu3y72mq450zykryk2w6kqs7ueuxquwxcvr",
    "hash": "bc69c7fd9c86f41144e90989726470e449e56c15a3c44b0c9653b56043dccf0c",
    "puzzle": "(a (q 2 (q 2 (i 11 (q 2 (i (= 5 (point_add 11 (pubkey_for_exp (sha256 11 (a 6 (c 2 (c 23 ()))))))) (q 2 23 47) (q 8)) 1) (q 4 (c 4 (c 5 (c (a 6 (c 2 (c 23 ()))) ()))) (a 23 47))) 1) (c (q 50 2 (i (l 5) (q 11 (q . 2) (a 6 (c 2 (c 9 ()))) (a 6 (c 2 (c 13 ())))) (q 11 (q . 1) 5)) 1) 1)) (c (q . 0xb2bc5401037372163239ba8a9ffe2497bf9883c677c330477b6d6766951d60ddc53454ca85b97fbe81bc8deacc9a7fcc) 1))",
    "synPubKey": "0xb2bc5401037372163239ba8a9ffe2497bf9883c677c330477b6d6766951d60ddc53454ca85b97fbe81bc8deacc9a7fcc",
    "type": "Hardened",
  },
  Object {
    "address": "xch1kg4j4szwqdlh99y4qz4dh9k2hwtp7havwp90a3tw9k6ttjh275ssgnpa92",
    "hash": "b22b2ac04e037f72949500aadb96cabb961f5fac704afec56e2db4b5caeaf521",
    "puzzle": "(a (q 2 (q 2 (i 11 (q 2 (i (= 5 (point_add 11 (pubkey_for_exp (sha256 11 (a 6 (c 2 (c 23 ()))))))) (q 2 23 47) (q 8)) 1) (q 4 (c 4 (c 5 (c (a 6 (c 2 (c 23 ()))) ()))) (a 23 47))) 1) (c (q 50 2 (i (l 5) (q 11 (q . 2) (a 6 (c 2 (c 9 ()))) (a 6 (c 2 (c 13 ())))) (q 11 (q . 1) 5)) 1) 1)) (c (q . 0x8bf27be44e076849cf0afb7397c252aa9c0083401becffd3c2f5d53491da904d7db01875b1d3cc4174eb3b32c16f1cbf) 1))",
    "synPubKey": "0x8bf27be44e076849cf0afb7397c252aa9c0083401becffd3c2f5d53491da904d7db01875b1d3cc4174eb3b32c16f1cbf",
    "type": "Observed",
  },
  Object {
    "address": "xch1gp9gmlt5r8a3enz8vdhdzchzpje6ef5lwfrszxpqvdrjv88vzpnsk3jqvz",
    "hash": "404a8dfd7419fb1ccc47636ed162e20cb3aca69f72470118206347261cec1067",
    "puzzle": "(a (q 2 (q 2 (i 11 (q 2 (i (= 5 (point_add 11 (pubkey_for_exp (sha256 11 (a 6 (c 2 (c 23 ()))))))) (q 2 23 47) (q 8)) 1) (q 4 (c 4 (c 5 (c (a 6 (c 2 (c 23 ()))) ()))) (a 23 47))) 1) (c (q 50 2 (i (l 5) (q 11 (q . 2) (a 6 (c 2 (c 9 ()))) (a 6 (c 2 (c 13 ())))) (q 11 (q . 1) 5)) 1) 1)) (c (q . 0x8c4bc0911d58cfe8d32fd0b8369e84b134ae4d03d01e7bf88376a29b187b83bf085883d2935b4b18693d91c0724fd7dd) 1))",
    "synPubKey": "0x8c4bc0911d58cfe8d32fd0b8369e84b134ae4d03d01e7bf88376a29b187b83bf085883d2935b4b18693d91c0724fd7dd",
    "type": "Hardened",
  },
  Object {
    "address": "xch1dd8rdt2qqcwwjtv5uwzvgemx3xfututqnlr49rw8ctvcy2r4wpgqajszdx",
    "hash": "6b4e36ad40061ce92d94e384c467668993c5f1609fc7528dc7c2d98228757050",
    "puzzle": "(a (q 2 (q 2 (i 11 (q 2 (i (= 5 (point_add 11 (pubkey_for_exp (sha256 11 (a 6 (c 2 (c 23 ()))))))) (q 2 23 47) (q 8)) 1) (q 4 (c 4 (c 5 (c (a 6 (c 2 (c 23 ()))) ()))) (a 23 47))) 1) (c (q 50 2 (i (l 5) (q 11 (q . 2) (a 6 (c 2 (c 9 ()))) (a 6 (c 2 (c 13 ())))) (q 11 (q . 1) 5)) 1) 1)) (c (q . 0xb693231a8f4b94a2a2ebb562b57cdea524e8af4be80c83bde0032cd324b35e36cdb5edada597a12961ffe18c99c2fa27) 1))",
    "synPubKey": "0xb693231a8f4b94a2a2ebb562b57cdea524e8af4be80c83bde0032cd324b35e36cdb5edada597a12961ffe18c99c2fa27",
    "type": "Observed",
  },
  Object {
    "address": "xch1jq2e4y8cuwlcyvxtwpwtq0fa4ypy9wh2m4mmcd0mye3g7d955c0sr28wvc",
    "hash": "90159a90f8e3bf8230cb705cb03d3da90242baeadd77bc35fb26628f34b4a61f",
    "puzzle": "(a (q 2 (q 2 (i 11 (q 2 (i (= 5 (point_add 11 (pubkey_for_exp (sha256 11 (a 6 (c 2 (c 23 ()))))))) (q 2 23 47) (q 8)) 1) (q 4 (c 4 (c 5 (c (a 6 (c 2 (c 23 ()))) ()))) (a 23 47))) 1) (c (q 50 2 (i (l 5) (q 11 (q . 2) (a 6 (c 2 (c 9 ()))) (a 6 (c 2 (c 13 ())))) (q 11 (q . 1) 5)) 1) 1)) (c (q . 0x9740a162e30982ed31187e7d70057e97059da533a37b8a1e511b97d98e244b38959e2a622015d19ecc5da8e79b50bdf8) 1))",
    "synPubKey": "0x9740a162e30982ed31187e7d70057e97059da533a37b8a1e511b97d98e244b38959e2a622015d19ecc5da8e79b50bdf8",
    "type": "Hardened",
  },
  Object {
    "address": "xch1wh3h4jkyss70az00yf0tnncteyzky90njpcr9q6rxlj0gy6ws5vsuahmqv",
    "hash": "75e37acac4843cfe89ef225eb9cf0bc9056215f3907032834337e4f4134e8519",
    "puzzle": "(a (q 2 (q 2 (i 11 (q 2 (i (= 5 (point_add 11 (pubkey_for_exp (sha256 11 (a 6 (c 2 (c 23 ()))))))) (q 2 23 47) (q 8)) 1) (q 4 (c 4 (c 5 (c (a 6 (c 2 (c 23 ()))) ()))) (a 23 47))) 1) (c (q 50 2 (i (l 5) (q 11 (q . 2) (a 6 (c 2 (c 9 ()))) (a 6 (c 2 (c 13 ())))) (q 11 (q . 1) 5)) 1) 1)) (c (q . 0x8d3b3e92592a0cf97d7b69aaae13079d8751027ca7fe116817fd65fc39cba03e458f373bd91f7685b516bb08d395c50c) 1))",
    "synPubKey": "0x8d3b3e92592a0cf97d7b69aaae13079d8751027ca7fe116817fd65fc39cba03e458f373bd91f7685b516bb08d395c50c",
    "type": "Observed",
  },
]
`;

exports[`Standard Transfer: plan 1`] = `
Object {
  "XCH": Object {
    "coins": Array [
      Object {
        "amount": 1750000000000n,
        "parent_coin_info": "0xe3b0c44298fc1c149afbf4c8996fb92400000000000000000000000000000001",
        "puzzle_hash": "0x4f45877796d7a64e192bcc9f899afeedae391f71af3afd7e15a0792c049d23d3",
      },
    ],
    "targets": Array [
      Object {
        "address": "0x87908e3f85bf4b55c7e7709915c2ce97a1e6ec1d227e54a04dbfee6862d546a5",
        "amount": 1000000n,
        "symbol": "XCH",
      },
      Object {
        "address": "0x4f45877796d7a64e192bcc9f899afeedae391f71af3afd7e15a0792c049d23d3",
        "amount": 1749999000000n,
        "symbol": "XCH",
      },
    ],
  },
}
`;

exports[`Standard Transfer: puzzles 1`] = `
Array [
  Object {
    "address": "xch1fazcwauk67nyuxftej0cnxh7akhrj8m34ua06ls45pujcpyay0fsfc0grp",
    "hash": "4f45877796d7a64e192bcc9f899afeedae391f71af3afd7e15a0792c049d23d3",
    "privateKey": PrivateKey {},
    "puzzle": "(a (q 2 (q 2 (i 11 (q 2 (i (= 5 (point_add 11 (pubkey_for_exp (sha256 11 (a 6 (c 2 (c 23 ()))))))) (q 2 23 47) (q 8)) 1) (q 4 (c 4 (c 5 (c (a 6 (c 2 (c 23 ()))) ()))) (a 23 47))) 1) (c (q 50 2 (i (l 5) (q 11 (q . 2) (a 6 (c 2 (c 9 ()))) (a 6 (c 2 (c 13 ())))) (q 11 (q . 1) 5)) 1) 1)) (c (q . 0xa042c855d234578415254b7870b711fb25e8f85beaa4a66bd0673d394c761fa156406c2e3bb375d5b18766d2a12cc918) 1))",
    "synPubKey": "0xa042c855d234578415254b7870b711fb25e8f85beaa4a66bd0673d394c761fa156406c2e3bb375d5b18766d2a12cc918",
    "type": "Hardened",
  },
  Object {
    "address": "xch1tswpapnpytgldc4403ej53z90ptw0ckghky4c5ymkfqpneydd79sjqg40r",
    "hash": "5c1c1e866122d1f6e2b57c732a44457856e7e2c8bd895c509bb24019e48d6f8b",
    "privateKey": PrivateKey {},
    "puzzle": "(a (q 2 (q 2 (i 11 (q 2 (i (= 5 (point_add 11 (pubkey_for_exp (sha256 11 (a 6 (c 2 (c 23 ()))))))) (q 2 23 47) (q 8)) 1) (q 4 (c 4 (c 5 (c (a 6 (c 2 (c 23 ()))) ()))) (a 23 47))) 1) (c (q 50 2 (i (l 5) (q 11 (q . 2) (a 6 (c 2 (c 9 ()))) (a 6 (c 2 (c 13 ())))) (q 11 (q . 1) 5)) 1) 1)) (c (q . 0xa84464e45921d9dd485a3fb483c348569db6121eae6b449b1e8dc93c7076204e5eb7d0b71a6e1629c74e2e79f70272ff) 1))",
    "synPubKey": "0xa84464e45921d9dd485a3fb483c348569db6121eae6b449b1e8dc93c7076204e5eb7d0b71a6e1629c74e2e79f70272ff",
    "type": "Observed",
  },
  Object {
    "address": "xch1lawqfgvg5g5gh874vemxydypud883sr803agqwnrv09sp4m3a3yqlxm5xq",
    "hash": "ff5c04a188a2288b9fd56676623481e34e78c0677c7a803a6363cb00d771ec48",
    "privateKey": PrivateKey {},
    "puzzle": "(a (q 2 (q 2 (i 11 (q 2 (i (= 5 (point_add 11 (pubkey_for_exp (sha256 11 (a 6 (c 2 (c 23 ()))))))) (q 2 23 47) (q 8)) 1) (q 4 (c 4 (c 5 (c (a 6 (c 2 (c 23 ()))) ()))) (a 23 47))) 1) (c (q 50 2 (i (l 5) (q 11 (q . 2) (a 6 (c 2 (c 9 ()))) (a 6 (c 2 (c 13 ())))) (q 11 (q . 1) 5)) 1) 1)) (c (q . 0xb19697c17f2cdab19e31db62777f1b48944e6a50eea8bc813c3950e975498d2e43da897a02dd97a8257f5f7a3c40785b) 1))",
    "synPubKey": "0xb19697c17f2cdab19e31db62777f1b48944e6a50eea8bc813c3950e975498d2e43da897a02dd97a8257f5f7a3c40785b",
    "type": "Hardened",
  },
  Object {
    "address": "xch1tnks60dve3psw65rzznj0wrmeuaw90dehtg9dwanta4cpsaqscrqm6330v",
    "hash": "5ced0d3daccc43076a8310a727b87bcf3ae2bdb9bad056bbb35f6b80c3a08606",
    "privateKey": PrivateKey {},
    "puzzle": "(a (q 2 (q 2 (i 11 (q 2 (i (= 5 (point_add 11 (pubkey_for_exp (sha256 11 (a 6 (c 2 (c 23 ()))))))) (q 2 23 47) (q 8)) 1) (q 4 (c 4 (c 5 (c (a 6 (c 2 (c 23 ()))) ()))) (a 23 47))) 1) (c (q 50 2 (i (l 5) (q 11 (q . 2) (a 6 (c 2 (c 9 ()))) (a 6 (c 2 (c 13 ())))) (q 11 (q . 1) 5)) 1) 1)) (c (q . 0x8e561b96f3debc95c04893a357f291e888f550453f36b3db4091ed1c266ce04a79cffd0ba2dce1a3d3a7488462830b1b) 1))",
    "synPubKey": "0x8e561b96f3debc95c04893a357f291e888f550453f36b3db4091ed1c266ce04a79cffd0ba2dce1a3d3a7488462830b1b",
    "type": "Observed",
  },
  Object {
    "address": "xch1h35u0lvusm6pz38fpxyhyersu3y72mq450zykryk2w6kqs7ueuxquwxcvr",
    "hash": "bc69c7fd9c86f41144e90989726470e449e56c15a3c44b0c9653b56043dccf0c",
    "privateKey": PrivateKey {},
    "puzzle": "(a (q 2 (q 2 (i 11 (q 2 (i (= 5 (point_add 11 (pubkey_for_exp (sha256 11 (a 6 (c 2 (c 23 ()))))))) (q 2 23 47) (q 8)) 1) (q 4 (c 4 (c 5 (c (a 6 (c 2 (c 23 ()))) ()))) (a 23 47))) 1) (c (q 50 2 (i (l 5) (q 11 (q . 2) (a 6 (c 2 (c 9 ()))) (a 6 (c 2 (c 13 ())))) (q 11 (q . 1) 5)) 1) 1)) (c (q . 0xb2bc5401037372163239ba8a9ffe2497bf9883c677c330477b6d6766951d60ddc53454ca85b97fbe81bc8deacc9a7fcc) 1))",
    "synPubKey": "0xb2bc5401037372163239ba8a9ffe2497bf9883c677c330477b6d6766951d60ddc53454ca85b97fbe81bc8deacc9a7fcc",
    "type": "Hardened",
  },
  Object {
    "address": "xch1kg4j4szwqdlh99y4qz4dh9k2hwtp7havwp90a3tw9k6ttjh275ssgnpa92",
    "hash": "b22b2ac04e037f72949500aadb96cabb961f5fac704afec56e2db4b5caeaf521",
    "privateKey": PrivateKey {},
    "puzzle": "(a (q 2 (q 2 (i 11 (q 2 (i (= 5 (point_add 11 (pubkey_for_exp (sha256 11 (a 6 (c 2 (c 23 ()))))))) (q 2 23 47) (q 8)) 1) (q 4 (c 4 (c 5 (c (a 6 (c 2 (c 23 ()))) ()))) (a 23 47))) 1) (c (q 50 2 (i (l 5) (q 11 (q . 2) (a 6 (c 2 (c 9 ()))) (a 6 (c 2 (c 13 ())))) (q 11 (q . 1) 5)) 1) 1)) (c (q . 0x8bf27be44e076849cf0afb7397c252aa9c0083401becffd3c2f5d53491da904d7db01875b1d3cc4174eb3b32c16f1cbf) 1))",
    "synPubKey": "0x8bf27be44e076849cf0afb7397c252aa9c0083401becffd3c2f5d53491da904d7db01875b1d3cc4174eb3b32c16f1cbf",
    "type": "Observed",
  },
  Object {
    "address": "xch1gp9gmlt5r8a3enz8vdhdzchzpje6ef5lwfrszxpqvdrjv88vzpnsk3jqvz",
    "hash": "404a8dfd7419fb1ccc47636ed162e20cb3aca69f72470118206347261cec1067",
    "privateKey": PrivateKey {},
    "puzzle": "(a (q 2 (q 2 (i 11 (q 2 (i (= 5 (point_add 11 (pubkey_for_exp (sha256 11 (a 6 (c 2 (c 23 ()))))))) (q 2 23 47) (q 8)) 1) (q 4 (c 4 (c 5 (c (a 6 (c 2 (c 23 ()))) ()))) (a 23 47))) 1) (c (q 50 2 (i (l 5) (q 11 (q . 2) (a 6 (c 2 (c 9 ()))) (a 6 (c 2 (c 13 ())))) (q 11 (q . 1) 5)) 1) 1)) (c (q . 0x8c4bc0911d58cfe8d32fd0b8369e84b134ae4d03d01e7bf88376a29b187b83bf085883d2935b4b18693d91c0724fd7dd) 1))",
    "synPubKey": "0x8c4bc0911d58cfe8d32fd0b8369e84b134ae4d03d01e7bf88376a29b187b83bf085883d2935b4b18693d91c0724fd7dd",
    "type": "Hardened",
  },
  Object {
    "address": "xch1dd8rdt2qqcwwjtv5uwzvgemx3xfututqnlr49rw8ctvcy2r4wpgqajszdx",
    "hash": "6b4e36ad40061ce92d94e384c467668993c5f1609fc7528dc7c2d98228757050",
    "privateKey": PrivateKey {},
    "puzzle": "(a (q 2 (q 2 (i 11 (q 2 (i (= 5 (point_add 11 (pubkey_for_exp (sha256 11 (a 6 (c 2 (c 23 ()))))))) (q 2 23 47) (q 8)) 1) (q 4 (c 4 (c 5 (c (a 6 (c 2 (c 23 ()))) ()))) (a 23 47))) 1) (c (q 50 2 (i (l 5) (q 11 (q . 2) (a 6 (c 2 (c 9 ()))) (a 6 (c 2 (c 13 ())))) (q 11 (q . 1) 5)) 1) 1)) (c (q . 0xb693231a8f4b94a2a2ebb562b57cdea524e8af4be80c83bde0032cd324b35e36cdb5edada597a12961ffe18c99c2fa27) 1))",
    "synPubKey": "0xb693231a8f4b94a2a2ebb562b57cdea524e8af4be80c83bde0032cd324b35e36cdb5edada597a12961ffe18c99c2fa27",
    "type": "Observed",
  },
  Object {
    "address": "xch1jq2e4y8cuwlcyvxtwpwtq0fa4ypy9wh2m4mmcd0mye3g7d955c0sr28wvc",
    "hash": "90159a90f8e3bf8230cb705cb03d3da90242baeadd77bc35fb26628f34b4a61f",
    "privateKey": PrivateKey {},
    "puzzle": "(a (q 2 (q 2 (i 11 (q 2 (i (= 5 (point_add 11 (pubkey_for_exp (sha256 11 (a 6 (c 2 (c 23 ()))))))) (q 2 23 47) (q 8)) 1) (q 4 (c 4 (c 5 (c (a 6 (c 2 (c 23 ()))) ()))) (a 23 47))) 1) (c (q 50 2 (i (l 5) (q 11 (q . 2) (a 6 (c 2 (c 9 ()))) (a 6 (c 2 (c 13 ())))) (q 11 (q . 1) 5)) 1) 1)) (c (q . 0x9740a162e30982ed31187e7d70057e97059da533a37b8a1e511b97d98e244b38959e2a622015d19ecc5da8e79b50bdf8) 1))",
    "synPubKey": "0x9740a162e30982ed31187e7d70057e97059da533a37b8a1e511b97d98e244b38959e2a622015d19ecc5da8e79b50bdf8",
    "type": "Hardened",
  },
  Object {
    "address": "xch1wh3h4jkyss70az00yf0tnncteyzky90njpcr9q6rxlj0gy6ws5vsuahmqv",
    "hash": "75e37acac4843cfe89ef225eb9cf0bc9056215f3907032834337e4f4134e8519",
    "privateKey": PrivateKey {},
    "puzzle": "(a (q 2 (q 2 (i 11 (q 2 (i (= 5 (point_add 11 (pubkey_for_exp (sha256 11 (a 6 (c 2 (c 23 ()))))))) (q 2 23 47) (q 8)) 1) (q 4 (c 4 (c 5 (c (a 6 (c 2 (c 23 ()))) ()))) (a 23 47))) 1) (c (q 50 2 (i (l 5) (q 11 (q . 2) (a 6 (c 2 (c 9 ()))) (a 6 (c 2 (c 13 ())))) (q 11 (q . 1) 5)) 1) 1)) (c (q . 0x8d3b3e92592a0cf97d7b69aaae13079d8751027ca7fe116817fd65fc39cba03e458f373bd91f7685b516bb08d395c50c) 1))",
    "synPubKey": "0x8d3b3e92592a0cf97d7b69aaae13079d8751027ca7fe116817fd65fc39cba03e458f373bd91f7685b516bb08d395c50c",
    "type": "Observed",
  },
]
`;
